--- a/src/includes/sections/pricing.njk
+++ b/src/includes/sections/pricing.njk
@@ -66,9 +66,12 @@
                                     Dodatkowo płatny 10 zł za szt.
                                 </p>
                             </div>
-                            <svg viewBox="0 0 66 66" xmlns="http://www.w3.org/2000/svg" fill="none" height="45" width="45">
-                                <circle cx="33" cy="33" r="33" fill="var(--color-accent-1)"></circle><path d="M47.2647 35.0507C47.8505 34.4649 47.8505 33.5151 47.2647 32.9293L37.7187 23.3834C37.133 22.7976 36.1832 22.7976 35.5974 23.3834C35.0116 23.9692 35.0116 24.9189 35.5974 25.5047L44.0827 33.99L35.5974 42.4753C35.0116 43.0611 35.0116 44.0108 35.5974 44.5966C36.1832 45.1824 37.133 45.1824 37.7187 44.5966L47.2647 35.0507ZM19.7958 35.49H46.204V32.49H19.7958V35.49Z" fill="#fff"></path>
-                            </svg>
+                            <a href="tel:222472020" class="btn-arrow">
+                                <span>Zarezerwuj</span>
+                                <svg viewBox="0 0 66 66" xmlns="http://www.w3.org/2000/svg" fill="none" height="45" width="45">
+                                    <circle cx="33" cy="33" r="33" fill="var(--color-accent-1)"></circle><path d="M47.2647 35.0507C47.8505 34.4649 47.8505 33.5151 47.2647 32.9293L37.7187 23.3834C37.133 22.7976 36.1832 22.7976 35.5974 23.3834C35.0116 23.9692 35.0116 24.9189 35.5974 25.5047L44.0827 33.99L35.5974 42.4753C35.0116 43.0611 35.0116 44.0108 35.5974 44.5966C36.1832 45.1824 37.133 45.1824 37.7187 44.5966L47.2647 35.0507ZM19.7958 35.49H46.204V32.49H19.7958V35.49Z" fill="#fff"></path>
+                                </svg>
+                            </a>
                         </div>
                     </div>
                     <div class="col-md-6 col-xl-4">
@@ -81,9 +84,12 @@
                                      Dodatkowo płatne 10 zł 
                                 </p>
                             </div>
-                            <svg viewBox="0 0 66 66" xmlns="http://www.w3.org/2000/svg" fill="none" height="45" width="45">
-                                <circle cx="33" cy="33" r="33" fill="var(--color-accent-1)"></circle><path d="M47.2647 35.0507C47.8505 34.4649 47.8505 33.5151 47.2647 32.9293L37.7187 23.3834C37.133 22.7976 36.1832 22.7976 35.5974 23.3834C35.0116 23.9692 35.0116 24.9189 35.5974 25.5047L44.0827 33.99L35.5974 42.4753C35.0116 43.0611 35.0116 44.0108 35.5974 44.5966C36.1832 45.1824 37.133 45.1824 37.7187 44.5966L47.2647 35.0507ZM19.7958 35.49H46.204V32.49H19.7958V35.49Z" fill="#fff"></path>
-                            </svg>
+                            <a href="tel:222472020" class="btn-arrow">
+                                <span>Zarezerwuj</span>
+                                <svg viewBox="0 0 66 66" xmlns="http://www.w3.org/2000/svg" fill="none" height="45" width="45">
+                                    <circle cx="33" cy="33" r="33" fill="var(--color-accent-1)"></circle><path d="M47.2647 35.0507C47.8505 34.4649 47.8505 33.5151 47.2647 32.9293L37.7187 23.3834C37.133 22.7976 36.1832 22.7976 35.5974 23.3834C35.0116 23.9692 35.0116 24.9189 35.5974 25.5047L44.0827 33.99L35.5974 42.4753C35.0116 43.0611 35.0116 44.0108 35.5974 44.5966C36.1832 45.1824 37.133 45.1824 37.7187 44.5966L47.2647 35.0507ZM19.7958 35.49H46.204V32.49H19.7958V35.49Z" fill="#fff"></path>
+                                </svg>
+                            </a>
                         </div>
                     </div>
                     <div class="col-md-6 col-xl-4">
@@ -96,9 +102,12 @@
                                     Dodatkowo płatne 30 zł
                                 </p>
                             </div>
-                            <svg viewBox="0 0 66 66" xmlns="http://www.w3.org/2000/svg" fill="none" height="45" width="45">
-                                <circle cx="33" cy="33" r="33" fill="var(--color-accent-1)"></circle><path d="M47.2647 35.0507C47.8505 34.4649 47.8505 33.5151 47.2647 32.9293L37.7187 23.3834C37.133 22.7976 36.1832 22.7976 35.5974 23.3834C35.0116 23.9692 35.0116 24.9189 35.5974 25.5047L44.0827 33.99L35.5974 42.4753C35.0116 43.0611 35.0116 44.0108 35.5974 44.5966C36.1832 45.1824 37.133 45.1824 37.7187 44.5966L47.2647 35.0507ZM19.7958 35.49H46.204V32.49H19.7958V35.49Z" fill="#fff"></path>
-                            </svg>
+                            <a href="tel:222472020" class="btn-arrow">
+                                <span>Zarezerwuj</span>
+                                <svg viewBox="0 0 66 66" xmlns="http://www.w3.org/2000/svg" fill="none" height="45" width="45">
+                                    <circle cx="33" cy="33" r="33" fill="var(--color-accent-1)"></circle><path d="M47.2647 35.0507C47.8505 34.4649 47.8505 33.5151 47.2647 32.9293L37.7187 23.3834C37.133 22.7976 36.1832 22.7976 35.5974 23.3834C35.0116 23.9692 35.0116 24.9189 35.5974 25.5047L44.0827 33.99L35.5974 42.4753C35.0116 43.0611 35.0116 44.0108 35.5974 44.5966C36.1832 45.1824 37.133 45.1824 37.7187 44.5966L47.2647 35.0507ZM19.7958 35.49H46.204V32.49H19.7958V35.49Z" fill="#fff"></path>
+                                </svg>
+                            </a>
                         </div>
                     </div>
                     <div class="col-md-6 col-xl-4">
@@ -111,9 +120,12 @@
                                      Liczony od momentu rozpoczęcia kursu 0,85 gr za min/godzina 57 zł
                                 </p>
                             </div>
-                            <svg viewBox="0 0 66 66" xmlns="http://www.w3.org/2000/svg" fill="none" height="45" width="45">
-                                <circle cx="33" cy="33" r="33" fill="var(--color-accent-1)"></circle><path d="M47.2647 35.0507C47.8505 34.4649 47.8505 33.5151 47.2647 32.9293L37.7187 23.3834C37.133 22.7976 36.1832 22.7976 35.5974 23.3834C35.0116 23.9692 35.0116 24.9189 35.5974 25.5047L44.0827 33.99L35.5974 42.4753C35.0116 43.0611 35.0116 44.0108 35.5974 44.5966C36.1832 45.1824 37.133 45.1824 37.7187 44.5966L47.2647 35.0507ZM19.7958 35.49H46.204V32.49H19.7958V35.49Z" fill="#fff"></path>
-                            </svg>
+                            <a href="tel:222472020" class="btn-arrow">
+                                <span>Zarezerwuj</span>
+                                <svg viewBox="0 0 66 66" xmlns="http://www.w3.org/2000/svg" fill="none" height="45" width="45">
+                                    <circle cx="33" cy="33" r="33" fill="var(--color-accent-1)"></circle><path d="M47.2647 35.0507C47.8505 34.4649 47.8505 33.5151 47.2647 32.9293L37.7187 23.3834C37.133 22.7976 36.1832 22.7976 35.5974 23.3834C35.0116 23.9692 35.0116 24.9189 35.5974 25.5047L44.0827 33.99L35.5974 42.4753C35.0116 43.0611 35.0116 44.0108 35.5974 44.5966C36.1832 45.1824 37.133 45.1824 37.7187 44.5966L47.2647 35.0507ZM19.7958 35.49H46.204V32.49H19.7958V35.49Z" fill="#fff"></path>
+                                </svg>
+                            </a>
                         </div>
                     </div>
                     <div class="col-md-6 col-xl-4">
@@ -126,9 +138,12 @@
                                    Wedle regularnego cennika + 20 zł za usługę
                                 </p>
                             </div>
-                            <svg viewBox="0 0 66 66" xmlns="http://www.w3.org/2000/svg" fill="none" height="45" width="45">
-                                <circle cx="33" cy="33" r="33" fill="var(--color-accent-1)"></circle><path d="M47.2647 35.0507C47.8505 34.4649 47.8505 33.5151 47.2647 32.9293L37.7187 23.3834C37.133 22.7976 36.1832 22.7976 35.5974 23.3834C35.0116 23.9692 35.0116 24.9189 35.5974 25.5047L44.0827 33.99L35.5974 42.4753C35.0116 43.0611 35.0116 44.0108 35.5974 44.5966C36.1832 45.1824 37.133 45.1824 37.7187 44.5966L47.2647 35.0507ZM19.7958 35.49H46.204V32.49H19.7958V35.49Z" fill="#fff"></path>
-                            </svg>
+                            <a href="tel:222472020" class="btn-arrow">
+                                <span>Zarezerwuj</span>
+                                <svg viewBox="0 0 66 66" xmlns="http://www.w3.org/2000/svg" fill="none" height="45" width="45">
+                                    <circle cx="33" cy="33" r="33" fill="var(--color-accent-1)"></circle><path d="M47.2647 35.0507C47.8505 34.4649 47.8505 33.5151 47.2647 32.9293L37.7187 23.3834C37.133 22.7976 36.1832 22.7976 35.5974 23.3834C35.0116 23.9692 35.0116 24.9189 35.5974 25.5047L44.0827 33.99L35.5974 42.4753C35.0116 43.0611 35.0116 44.0108 35.5974 44.5966C36.1832 45.1824 37.133 45.1824 37.7187 44.5966L47.2647 35.0507ZM19.7958 35.49H46.204V32.49H19.7958V35.49Z" fill="#fff"></path>
+                                </svg>
+                            </a>
                         </div>
                     </div>
                     <div class="col-md-6 col-xl-4">
@@ -141,9 +156,12 @@
                                     + 4 walizki do 20 kg dodatkowo płatny za podstawienie 10 zł
                                 </p>
                             </div>
-                            <svg viewBox="0 0 66 66" xmlns="http://www.w3.org/2000/svg" fill="none" height="45" width="45">
-                                <circle cx="33" cy="33" r="33" fill="var(--color-accent-1)"></circle><path d="M47.2647 35.0507C47.8505 34.4649 47.8505 33.5151 47.2647 32.9293L37.7187 23.3834C37.133 22.7976 36.1832 22.7976 35.5974 23.3834C35.0116 23.9692 35.0116 24.9189 35.5974 25.5047L44.0827 33.99L35.5974 42.4753C35.0116 43.0611 35.0116 44.0108 35.5974 44.5966C36.1832 45.1824 37.133 45.1824 37.7187 44.5966L47.2647 35.0507ZM19.7958 35.49H46.204V32.49H19.7958V35.49Z" fill="#fff"></path>
-                            </svg>
+                            <a href="tel:222472020" class="btn-arrow">
+                                <span>Zarezerwuj</span>
+                                <svg viewBox="0 0 66 66" xmlns="http://www.w3.org/2000/svg" fill="none" height="45" width="45">
+                                    <circle cx="33" cy="33" r="33" fill="var(--color-accent-1)"></circle><path d="M47.2647 35.0507C47.8505 34.4649 47.8505 33.5151 47.2647 32.9293L37.7187 23.3834C37.133 22.7976 36.1832 22.7976 35.5974 23.3834C35.0116 23.9692 35.0116 24.9189 35.5974 25.5047L44.0827 33.99L35.5974 42.4753C35.0116 43.0611 35.0116 44.0108 35.5974 44.5966C36.1832 45.1824 37.133 45.1824 37.7187 44.5966L47.2647 35.0507ZM19.7958 35.49H46.204V32.49H19.7958V35.49Z" fill="#fff"></path>
+                                </svg>
+                            </a>
                         </div>
                     </div>
                     <div class="col-md-6 col-xl-4">
@@ -156,9 +174,12 @@
                                      Za podstawienie 20 zł i za każdy kilometr 10% od kwoty za przejechane km z cennika 
                                 </p>
                             </div>
-                            <svg viewBox="0 0 66 66" xmlns="http://www.w3.org/2000/svg" fill="none" height="45" width="45">
-                                <circle cx="33" cy="33" r="33" fill="var(--color-accent-1)"></circle><path d="M47.2647 35.0507C47.8505 34.4649 47.8505 33.5151 47.2647 32.9293L37.7187 23.3834C37.133 22.7976 36.1832 22.7976 35.5974 23.3834C35.0116 23.9692 35.0116 24.9189 35.5974 25.5047L44.0827 33.99L35.5974 42.4753C35.0116 43.0611 35.0116 44.0108 35.5974 44.5966C36.1832 45.1824 37.133 45.1824 37.7187 44.5966L47.2647 35.0507ZM19.7958 35.49H46.204V32.49H19.7958V35.49Z" fill="#fff"></path>
-                            </svg>
+                            <a href="tel:222472020" class="btn-arrow">
+                                <span>Zarezerwuj</span>
+                                <svg viewBox="0 0 66 66" xmlns="http://www.w3.org/2000/svg" fill="none" height="45" width="45">
+                                    <circle cx="33" cy="33" r="33" fill="var(--color-accent-1)"></circle><path d="M47.2647 35.0507C47.8505 34.4649 47.8505 33.5151 47.2647 32.9293L37.7187 23.3834C37.133 22.7976 36.1832 22.7976 35.5974 23.3834C35.0116 23.9692 35.0116 24.9189 35.5974 25.5047L44.0827 33.99L35.5974 42.4753C35.0116 43.0611 35.0116 44.0108 35.5974 44.5966C36.1832 45.1824 37.133 45.1824 37.7187 44.5966L47.2647 35.0507ZM19.7958 35.49H46.204V32.49H19.7958V35.49Z" fill="#fff"></path>
+                                </svg>
+                            </a>
                         </div>
                     </div>
                     <div class="col-md-6 col-xl-4">
@@ -171,9 +192,12 @@
                                     Za podstawienie 40 zł i za każdy kilometr 15% od kwoty za przejechane km z cennika 
                                 </p>
                             </div>
-                            <svg viewBox="0 0 66 66" xmlns="http://www.w3.org/2000/svg" fill="none" height="45" width="45">
-                                <circle cx="33" cy="33" r="33" fill="var(--color-accent-1)"></circle><path d="M47.2647 35.0507C47.8505 34.4649 47.8505 33.5151 47.2647 32.9293L37.7187 23.3834C37.133 22.7976 36.1832 22.7976 35.5974 23.3834C35.0116 23.9692 35.0116 24.9189 35.5974 25.5047L44.0827 33.99L35.5974 42.4753C35.0116 43.0611 35.0116 44.0108 35.5974 44.5966C36.1832 45.1824 37.133 45.1824 37.7187 44.5966L47.2647 35.0507ZM19.7958 35.49H46.204V32.49H19.7958V35.49Z" fill="#fff"></path>
-                            </svg>
+                            <a href="tel:222472020" class="btn-arrow">
+                                <span>Zarezerwuj</span>
+                                <svg viewBox="0 0 66 66" xmlns="http://www.w3.org/2000/svg" fill="none" height="45" width="45">
+                                    <circle cx="33" cy="33" r="33" fill="var(--color-accent-1)"></circle><path d="M47.2647 35.0507C47.8505 34.4649 47.8505 33.5151 47.2647 32.9293L37.7187 23.3834C37.133 22.7976 36.1832 22.7976 35.5974 23.3834C35.0116 23.9692 35.0116 24.9189 35.5974 25.5047L44.0827 33.99L35.5974 42.4753C35.0116 43.0611 35.0116 44.0108 35.5974 44.5966C36.1832 45.1824 37.133 45.1824 37.7187 44.5966L47.2647 35.0507ZM19.7958 35.49H46.204V32.49H19.7958V35.49Z" fill="#fff"></path>
+                                </svg>
+                            </a>
                         </div>
                     </div>
                     <div class="col-md-6 col-xl-4">
@@ -186,9 +210,12 @@
                                     Za podstawienie 70 zł i za każdy kilometr 50% od kwoty za przejechane km z cennika  
                                 </p>
                             </div>
-                            <svg viewBox="0 0 66 66" xmlns="http://www.w3.org/2000/svg" fill="none" height="45" width="45">
-                                <circle cx="33" cy="33" r="33" fill="var(--color-accent-1)"></circle><path d="M47.2647 35.0507C47.8505 34.4649 47.8505 33.5151 47.2647 32.9293L37.7187 23.3834C37.133 22.7976 36.1832 22.7976 35.5974 23.3834C35.0116 23.9692 35.0116 24.9189 35.5974 25.5047L44.0827 33.99L35.5974 42.4753C35.0116 43.0611 35.0116 44.0108 35.5974 44.5966C36.1832 45.1824 37.133 45.1824 37.7187 44.5966L47.2647 35.0507ZM19.7958 35.49H46.204V32.49H19.7958V35.49Z" fill="#fff"></path>
-                            </svg>
+                            <a href="tel:222472020" class="btn-arrow">
+                                <span>Zarezerwuj</span>
+                                <svg viewBox="0 0 66 66" xmlns="http://www.w3.org/2000/svg" fill="none" height="45" width="45">
+                                    <circle cx="33" cy="33" r="33" fill="var(--color-accent-1)"></circle><path d="M47.2647 35.0507C47.8505 34.4649 47.8505 33.5151 47.2647 32.9293L37.7187 23.3834C37.133 22.7976 36.1832 22.7976 35.5974 23.3834C35.0116 23.9692 35.0116 24.9189 35.5974 25.5047L44.0827 33.99L35.5974 42.4753C35.0116 43.0611 35.0116 44.0108 35.5974 44.5966C36.1832 45.1824 37.133 45.1824 37.7187 44.5966L47.2647 35.0507ZM19.7958 35.49H46.204V32.49H19.7958V35.49Z" fill="#fff"></path>
+                                </svg>
+                            </a>
                         </div>
                     </div>
                 </div>
