--- a/src/includes/sections/services.njk
+++ b/src/includes/sections/services.njk
@@ -11,9 +11,12 @@
                     <p>
                         Fotelik dodatkowo płatny 10 zł za szt.
                     </p>
-                    <svg viewBox="0 0 66 66" xmlns="http://www.w3.org/2000/svg" fill="none" height="45" width="45">
-                        <circle cx="33" cy="33" r="33" fill="var(--color-accent-1)"></circle><path d="M47.2647 35.0507C47.8505 34.4649 47.8505 33.5151 47.2647 32.9293L37.7187 23.3834C37.133 22.7976 36.1832 22.7976 35.5974 23.3834C35.0116 23.9692 35.0116 24.9189 35.5974 25.5047L44.0827 33.99L35.5974 42.4753C35.0116 43.0611 35.0116 44.0108 35.5974 44.5966C36.1832 45.1824 37.133 45.1824 37.7187 44.5966L47.2647 35.0507ZM19.7958 35.49H46.204V32.49H19.7958V35.49Z" fill="#fff"></path>
-                    </svg>
+                    <a href="tel:222472020">
+                        <span>Zarezerwuj</span>
+                        <svg viewBox="0 0 66 66" xmlns="http://www.w3.org/2000/svg" fill="none" height="45" width="45">
+                            <circle cx="33" cy="33" r="33" fill="var(--color-accent-1)"></circle><path d="M47.2647 35.0507C47.8505 34.4649 47.8505 33.5151 47.2647 32.9293L37.7187 23.3834C37.133 22.7976 36.1832 22.7976 35.5974 23.3834C35.0116 23.9692 35.0116 24.9189 35.5974 25.5047L44.0827 33.99L35.5974 42.4753C35.0116 43.0611 35.0116 44.0108 35.5974 44.5966C36.1832 45.1824 37.133 45.1824 37.7187 44.5966L47.2647 35.0507ZM19.7958 35.49H46.204V32.49H19.7958V35.49Z" fill="#fff"></path>
+                        </svg>
+                    </a>
                 </div>
             </div>
             <div class="col-md-6 col-xl-4">
