--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -4129,8 +4129,9 @@
   --color-border: #74787b87;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
+/*
+@media (prefers-color-scheme:dark) { 
+    :root {
     --color-dark-1: #fdfdfd;
     --color-dark-2: #f7f7f7;
     --color-dark-3: #000e23;
@@ -4140,8 +4141,9 @@
     --color-heading: #fff;
     --color-text: #bcbcbc;
     --color-border: #74787b87;
+    }
   }
-}
+*/
 .bg-light-1 {
   background-color: var(--color-light-1);
 }
@@ -4918,10 +4920,15 @@ html.lenis, html.lenis body {
   font-weight: 600;
   text-transform: uppercase;
   letter-spacing: 1px;
-  background: var(--color-accent-1);
+  background: var(--color-accent-2);
   background: linear-gradient(0deg, var(--color-accent-2) 0%, var(--color-accent-1) 100%);
   color: #fff;
   cursor: pointer;
+}
+
+.btn-dark {
+  background: #111;
+  background: linear-gradient(0deg, var(--color-dark-2) 0%, var(--color-dark-1) 100%);
 }
 
 .button-anim-text {
@@ -5042,6 +5049,35 @@ html.lenis, html.lenis body {
     width: 0%;
   }
 }
+.btn-arrow {
+  display: flex;
+  align-items: center;
+}
+
+.btn-arrow span {
+  display: inline-block;
+  margin-right: 1em;
+  font-weight: 600;
+}
+
+.btn-arrow span,
+.btn-arrow svg,
+.btn-arrow svg circle {
+  transition: 0.3s ease-in-out;
+}
+
+.btn-arrow:hover span {
+  fill: var(--color-accent-2);
+}
+
+.btn-arrow:hover svg {
+  transform: rotate(0deg);
+}
+
+.btn-arrow:hover svg circle {
+  fill: var(--color-accent-2);
+}
+
 @media (min-width: 767px) {
   .button-anim:hover .button-anim-icon::before {
     transform: scale(1);
