--- a/src/assets/sass/components/button.scss
+++ b/src/assets/sass/components/button.scss
@@ -9,10 +9,15 @@
     font-weight: 600;
     text-transform: uppercase;
     letter-spacing: 1px;
-    background: var(--color-accent-1);
+    background: var(--color-accent-2);
     background: linear-gradient(0deg, var(--color-accent-2) 0%, var(--color-accent-1) 100%);
     color: #fff;
     cursor: pointer; 
+  }
+
+  .btn-dark {
+    background: #111;
+    background: linear-gradient(0deg, var(--color-dark-2) 0%, var(--color-dark-1) 100%);
   }
   
   .button-anim-text {
@@ -134,6 +139,30 @@
       width: 0%
     }
   }
+
+.btn-arrow {
+  display: flex;
+  align-items: center;
+}
+.btn-arrow span {
+  display: inline-block;
+  margin-right: 1em;
+  font-weight: 600;
+}
+.btn-arrow span,
+.btn-arrow svg,
+.btn-arrow svg circle {
+  transition: .3s ease-in-out;
+}
+.btn-arrow:hover span {
+  fill: var(--color-accent-2);
+}
+.btn-arrow:hover svg {
+  transform: rotate(0deg);
+}
+.btn-arrow:hover svg circle {
+  fill: var(--color-accent-2);
+}
 
 @media(min-width:767px) {
     .button-anim:hover .button-anim-icon::before {
