--- a/src/includes/sections/hero.njk
+++ b/src/includes/sections/hero.njk
@@ -27,10 +27,23 @@
         Pobierz najnowszą aplikację mobilną ze swojego sklepu z aplikacjami – instaluj tylko aplikacje z oryginalnych sklepów.
       </p>
       <div class="d-flex mt-3">
-        <a href="https://play.google.com/store/apps/details?id=com.taxity.bluutaxi" data-strength="60" title="Pobierz z Google Play" class="button-app magnetic fade-in">
+        <a href="/" title="Zamów przejazd" class="button-anim btn-dark magnetic me-3 fade-in"
+        data-strength="40">
+    <div class="button-anim-text">
+  <span>Zamów przejazd</span>
+  <span>Zamów przejazd</span>
+</div>
+
+<div class="button-anim-icon">
+  <svg class="icon-link" width="18" height="18" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" viewBox="0 0 100 100" style="enable-background:new 0 0 100 100;" xml:space="preserve">
+    <g><path fill="var(--color-accent-1)" d="M83.3,79.7c0,2-1.6,3.6-3.6,3.6H20.3c-2,0-3.6-1.6-3.6-3.6V20.3c0-2,1.6-3.6,3.6-3.6h23.4V9.5H20.3   c-6,0-10.8,4.8-10.8,10.8v59.4c0,6,4.8,10.8,10.8,10.8h59.4c6,0,10.8-4.8,10.8-10.8V56.3h-7.2V79.7z"/><polygon fill="var(--color-accent-1)" points="56.3,9.5 56.3,16.7 78.2,16.7 49.9,45 55,50.1 83.3,21.8 83.3,43.7 90.5,43.7 90.5,9.5  "/></g>
+  </svg>
+</div>
+</a>
+        <a href="https://play.google.com/store/apps/details?id=com.taxity.bluutaxi" data-strength="40" title="Pobierz z Google Play" class="button-app magnetic fade-in">
             <img src="/assets/img/hero/googleplay.png" alt="">
         </a>
-        <a href="https://apps.apple.com/pl/app/bluu-taxi-piaseczno-pra%C5%BCm%C3%B3w/id6504847568?platform=iphone" data-strength="60" title="Pobierz z Appstore" class="button-app magnetic fade-in">
+        <a href="https://apps.apple.com/pl/app/bluu-taxi-piaseczno-pra%C5%BCm%C3%B3w/id6504847568?platform=iphone" data-strength="40" title="Pobierz z Appstore" class="button-app magnetic fade-in">
             <img src="/assets/img/hero/appstore.png" alt="">
         </a>
       </div>
