--- a/src/includes/sections/reviews copy.njk
+++ b/src/includes/sections/reviews copy.njk
@@ -36,6 +36,37 @@ fetch("/.netlify/functions/getGoogleReviews")
 </script>
 
 
+        <div class="row g-3">
+            {% for post in collections.reviews.slice(0, 9)%}
+                <div class="col-md-6 col-xl-4 fade-in">
+                    <div class="rounded-md shadow-1 p-4 bg-light-1">
+                    <div class="review-card d-md-flex flex-column justify-content-between h-100">
+                        <div class="opinion-content">
+                            <p class="mt-0 mb-3">
+                                {{ post.data.review }}
+                            </p>
+                        </div>
+                        <div class="row g-3">
+                            <div class="col-12 py-2">
+                                <div class="line-x"></div>
+                            </div>
+                            <div class="col-auto">
+                                <img src="{{ post.data.avatar }}" loading="lazy" decoding="async" class="opinion-avatar rounded-full shadow-2 p-1" width="44" height="44" alt="{{ post.data.client }}">
+                            </div>
+                            <div class="col-auto">
+                                <p class="h4 my-0">
+                                    {{ post.data.title }}
+                                </p>
+                                <p class="my-1">
+                                    {{ post.data.client }}
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    </div>
+                </div>
+            {% endfor %}
+        </div>
     </div>
 </div>
 </section>
