--- a/src/includes/partials/footer.njk
+++ b/src/includes/partials/footer.njk
@@ -90,8 +90,8 @@
         <img src="/assets/img/template/payments.webp" alt="">
       </div>
       <div class="col-md-12">
-        <div class="d-md-flex gap-2 align-items-center py-4">
-          <p class="my-0 small color-light-2">Pobierz aplikacje mobilną</p>
+        <div class="d-flex gap-2 align-items-center py-4">
+          <p class="my-0 small color-light-2 d-none d-md-block">Pobierz aplikacje mobilną</p>
           <a href="https://play.google.com/store/apps/details?id=com.taxity.bluutaxi" title="Pobierz z Google Play" class="button-app btn-footer magnetic">
             <img src="/assets/img/hero/googleplay.png" alt="">
           </a>
