--- a/src/includes/sections/map.njk
+++ b/src/includes/sections/map.njk
@@ -2,11 +2,17 @@
 
 <section class="pt-medium pb-medium bg-dark-3">
     <div class="container">
+      <div class="col-md-6 mx-auto text-center pb-xsmall">
+        <p class="my-0 color-accent-1 fade-in">Sprawdź</p>
+        <h2 class="h1 mt-2 split-lines color-light-1">
+            Dokąd dowozimy
+        </h2>
+      </div>
         <div class="map-wrap rounded-md p-4 d-none">
             <img src="/assets/img/map.svg" alt="">
         </div>
 
-        <div id="map"></div>
+        <div id="map" class="fade-in"></div>
 
     </div>
 </section>
