--- a/src/index.njk
+++ b/src/index.njk
@@ -6,7 +6,9 @@ description: Oferujemy bezpieczne i tanie przewozy. Zatrudniamy wyłącznie doś
 
 {% include 'sections/hero.njk' %}
 {% include 'sections/values.njk' %}
+{% include 'sections/gallery.njk' %}
 {% include 'sections/pricing.njk' %}
+{% include 'sections/services.njk' %}
 {% include 'sections/map.njk' %}
 {% include 'sections/reviews.njk' %}
 
