--- a/src/assets/sass/style.scss
+++ b/src/assets/sass/style.scss
@@ -10,6 +10,8 @@
 
 @use 'components/header.scss';
 @use 'components/button.scss';
+@use 'components/swiper.scss';
+@use 'components/glightbox.scss';
 @use 'components/hero.scss';
 @use 'components/accordion.scss';
 @use 'components/helpers.scss';
