--- a/src/includes/partials/foot.njk
+++ b/src/includes/partials/foot.njk
@@ -2,6 +2,8 @@
 </div>
 
 <script src="/assets/js/libs/split-text.js"></script>
+<script src="/assets/js/libs/swiper.js"></script>
+<script src="/assets/js/libs/glightbox.js"></script>
 <script src="/assets/js/libs/swup.js"></script>
 <script src="/assets/js/libs/swup-progress.js"></script>
 <script src="/assets/js/libs/swup-body.js"></script>
@@ -24,6 +26,7 @@
   swup.hooks.on('page:view', () => {
        appMain(); animationMain()
   }, { before: true });
+  const lightbox = GLightbox();
 </script> 
 <script src="/assets/js/cookieconsent.js" defer></script>
 <script src="/assets/js/cookieconsent-init.js" defer></script>
