--- a/src/includes/partials/header.njk
+++ b/src/includes/partials/header.njk
@@ -159,6 +159,7 @@
           </div>
         </div>
       </div>
+      <div class="fixed-button"><a class="no-trans fixed-phone" href="tel:+48 733 240 024" title="Zadzwoń"><span class="fixed-phone-icon"><svg height="33" viewBox="0 0 96 96" width="33" xmlns="http://www.w3.org/2000/svg" fill="none"><g clip-path="url(#clip0_66_3)"><path d="M80 62C75 62 70.2 61.2 65.72 59.72C64.32 59.28 62.76 59.6 61.64 60.68L52.84 69.48C41.52 63.72 32.24 54.48 26.48 43.12L35.28 34.28C36.4 33.24 36.72 31.68 36.28 30.28C34.8 25.8 34 21 34 16C34 13.8 32.2 12 30 12H16C13.8 12 12 13.8 12 16C12 53.56 42.44 84 80 84C82.2 84 84 82.2 84 80V66C84 63.8 82.2 62 80 62ZM76 48H84C84 28.12 67.88 12 48 12V20C63.48 20 76 32.52 76 48ZM60 48H68C68 36.96 59.04 28 48 28V36C54.64 36 60 41.36 60 48Z" fill="black"></path></g><defs><clipPath id="clip0_66_3"><rect fill="white" height="96" width="96"></rect></clipPath></defs></svg> </span><span class="fixed-phone-number">+48 733 240 024</span></a></div>
     <div class="scrollContainer" id="pinSection">
       <script>
         var obj = document.querySelector('.preloader'),
