--- a/src/includes/sections/pricing.njk
+++ b/src/includes/sections/pricing.njk
@@ -1,6 +1,12 @@
-<section class="bg-dark-3" id="cennik">
-    <div class="pt-medium pb-small pb-md-medium rounded-xl bg-squares">
+<section class="pt-medium pb-medium pb-md-large bg-dark-3" id="cennik">
+
         <div class="container">
+            <div class="col-md-6 mx-auto text-center pb-xsmall">
+                <p class="my-0 color-accent-1 fade-in">Sprawdź</p>
+                <h2 class="h1 mt-2 split-lines color-light-1">
+                    Cennik usług
+                </h2>
+            </div>
             <div class="row g-4">
                 <div class="col-md-6">
                     <div class="pricing-card rounded-lg shadow-1 p-5 bg-light-1">
@@ -29,7 +35,7 @@
                     </div>
                 </div>
                 <div class="col-md-6">
-                    <div class="pricing-card rounded-lg shadow-1 p-5 bg-dark-3">
+                    <div class="pricing-card rounded-lg shadow-1 p-5 bg-dark-4">
                         <h2 class="mt-0 color-light-1">
                             Taryfa nocna
                         </h2>
@@ -54,228 +60,9 @@
               </a>
                     </div>
                 </div>
-
-                <div class="row g-4">
-                    <div class="col-md-6 col-xl-4">
-                        <div class="service-card rounded-lg shadow-3 p-4 bg-light-1 fade-in">
-                            <div>
-                                <h3 class="mb-2">
-                                    Fotelik dziecięcy
-                                </h3>
-                                <p class="mt-0">
-                                    Dodatkowo płatny 10 zł za szt.
-                                </p>
-                            </div>
-                            <a href="tel:222472020" class="btn-arrow">
-                                <span>Zarezerwuj</span>
-                                <svg viewBox="0 0 66 66" xmlns="http://www.w3.org/2000/svg" fill="none" height="45" width="45">
-                                    <circle cx="33" cy="33" r="33" fill="var(--color-accent-1)"></circle><path d="M47.2647 35.0507C47.8505 34.4649 47.8505 33.5151 47.2647 32.9293L37.7187 23.3834C37.133 22.7976 36.1832 22.7976 35.5974 23.3834C35.0116 23.9692 35.0116 24.9189 35.5974 25.5047L44.0827 33.99L35.5974 42.4753C35.0116 43.0611 35.0116 44.0108 35.5974 44.5966C36.1832 45.1824 37.133 45.1824 37.7187 44.5966L47.2647 35.0507ZM19.7958 35.49H46.204V32.49H19.7958V35.49Z" fill="#fff"></path>
-                                </svg>
-                            </a>
-                        </div>
-                    </div>
-                    <div class="col-md-6 col-xl-4">
-                        <div class="service-card rounded-lg shadow-3 p-4 bg-light-1 fade-in">
-                            <div>
-                                <h3 class="mb-2">
-                                    Zwierzęta
-                                </h3>
-                                <p class="mt-0">
-                                     Dodatkowo płatne 10 zł 
-                                </p>
-                            </div>
-                            <a href="tel:222472020" class="btn-arrow">
-                                <span>Zarezerwuj</span>
-                                <svg viewBox="0 0 66 66" xmlns="http://www.w3.org/2000/svg" fill="none" height="45" width="45">
-                                    <circle cx="33" cy="33" r="33" fill="var(--color-accent-1)"></circle><path d="M47.2647 35.0507C47.8505 34.4649 47.8505 33.5151 47.2647 32.9293L37.7187 23.3834C37.133 22.7976 36.1832 22.7976 35.5974 23.3834C35.0116 23.9692 35.0116 24.9189 35.5974 25.5047L44.0827 33.99L35.5974 42.4753C35.0116 43.0611 35.0116 44.0108 35.5974 44.5966C36.1832 45.1824 37.133 45.1824 37.7187 44.5966L47.2647 35.0507ZM19.7958 35.49H46.204V32.49H19.7958V35.49Z" fill="#fff"></path>
-                                </svg>
-                            </a>
-                        </div>
-                    </div>
-                    <div class="col-md-6 col-xl-4">
-                        <div class="service-card rounded-lg shadow-3 p-4 bg-light-1 fade-in">
-                            <div>
-                                <h3 class="mb-2">
-                                    Odpalenie auta
-                                </h3>
-                                <p class="mt-0">
-                                    Dodatkowo płatne 30 zł
-                                </p>
-                            </div>
-                            <a href="tel:222472020" class="btn-arrow">
-                                <span>Zarezerwuj</span>
-                                <svg viewBox="0 0 66 66" xmlns="http://www.w3.org/2000/svg" fill="none" height="45" width="45">
-                                    <circle cx="33" cy="33" r="33" fill="var(--color-accent-1)"></circle><path d="M47.2647 35.0507C47.8505 34.4649 47.8505 33.5151 47.2647 32.9293L37.7187 23.3834C37.133 22.7976 36.1832 22.7976 35.5974 23.3834C35.0116 23.9692 35.0116 24.9189 35.5974 25.5047L44.0827 33.99L35.5974 42.4753C35.0116 43.0611 35.0116 44.0108 35.5974 44.5966C36.1832 45.1824 37.133 45.1824 37.7187 44.5966L47.2647 35.0507ZM19.7958 35.49H46.204V32.49H19.7958V35.49Z" fill="#fff"></path>
-                                </svg>
-                            </a>
-                        </div>
-                    </div>
-                    <div class="col-md-6 col-xl-4">
-                        <div class="service-card rounded-lg shadow-3 p-4 bg-light-1 fade-in">
-                            <div>
-                                <h3 class="mb-2">
-                                    Czas oczekiwania postoju
-                                </h3>
-                                <p class="mt-0">
-                                     Liczony od momentu rozpoczęcia kursu 0,85 gr za min/godzina 57 zł
-                                </p>
-                            </div>
-                            <a href="tel:222472020" class="btn-arrow">
-                                <span>Zarezerwuj</span>
-                                <svg viewBox="0 0 66 66" xmlns="http://www.w3.org/2000/svg" fill="none" height="45" width="45">
-                                    <circle cx="33" cy="33" r="33" fill="var(--color-accent-1)"></circle><path d="M47.2647 35.0507C47.8505 34.4649 47.8505 33.5151 47.2647 32.9293L37.7187 23.3834C37.133 22.7976 36.1832 22.7976 35.5974 23.3834C35.0116 23.9692 35.0116 24.9189 35.5974 25.5047L44.0827 33.99L35.5974 42.4753C35.0116 43.0611 35.0116 44.0108 35.5974 44.5966C36.1832 45.1824 37.133 45.1824 37.7187 44.5966L47.2647 35.0507ZM19.7958 35.49H46.204V32.49H19.7958V35.49Z" fill="#fff"></path>
-                                </svg>
-                            </a>
-                        </div>
-                    </div>
-                    <div class="col-md-6 col-xl-4">
-                        <div class="service-card rounded-lg shadow-3 p-4 bg-light-1 fade-in">
-                            <div>
-                                <h3 class="mb-2">
-                                    Zakupy do domu 
-                                </h3>
-                                <p class="mt-0">
-                                   Wedle regularnego cennika + 20 zł za usługę
-                                </p>
-                            </div>
-                            <a href="tel:222472020" class="btn-arrow">
-                                <span>Zarezerwuj</span>
-                                <svg viewBox="0 0 66 66" xmlns="http://www.w3.org/2000/svg" fill="none" height="45" width="45">
-                                    <circle cx="33" cy="33" r="33" fill="var(--color-accent-1)"></circle><path d="M47.2647 35.0507C47.8505 34.4649 47.8505 33.5151 47.2647 32.9293L37.7187 23.3834C37.133 22.7976 36.1832 22.7976 35.5974 23.3834C35.0116 23.9692 35.0116 24.9189 35.5974 25.5047L44.0827 33.99L35.5974 42.4753C35.0116 43.0611 35.0116 44.0108 35.5974 44.5966C36.1832 45.1824 37.133 45.1824 37.7187 44.5966L47.2647 35.0507ZM19.7958 35.49H46.204V32.49H19.7958V35.49Z" fill="#fff"></path>
-                                </svg>
-                            </a>
-                        </div>
-                    </div>
-                    <div class="col-md-6 col-xl-4">
-                        <div class="service-card rounded-lg shadow-3 p-4 bg-light-1 fade-in">
-                            <div>
-                                <h3 class="mb-2">
-                                    Kombi auto do 4 pasażerów 
-                                </h3>
-                                <p class="mt-0">
-                                    + 4 walizki do 20 kg dodatkowo płatny za podstawienie 10 zł
-                                </p>
-                            </div>
-                            <a href="tel:222472020" class="btn-arrow">
-                                <span>Zarezerwuj</span>
-                                <svg viewBox="0 0 66 66" xmlns="http://www.w3.org/2000/svg" fill="none" height="45" width="45">
-                                    <circle cx="33" cy="33" r="33" fill="var(--color-accent-1)"></circle><path d="M47.2647 35.0507C47.8505 34.4649 47.8505 33.5151 47.2647 32.9293L37.7187 23.3834C37.133 22.7976 36.1832 22.7976 35.5974 23.3834C35.0116 23.9692 35.0116 24.9189 35.5974 25.5047L44.0827 33.99L35.5974 42.4753C35.0116 43.0611 35.0116 44.0108 35.5974 44.5966C36.1832 45.1824 37.133 45.1824 37.7187 44.5966L47.2647 35.0507ZM19.7958 35.49H46.204V32.49H19.7958V35.49Z" fill="#fff"></path>
-                                </svg>
-                            </a>
-                        </div>
-                    </div>
-                    <div class="col-md-6 col-xl-4">
-                        <div class="service-card rounded-lg shadow-3 p-4 bg-light-1 fade-in">
-                            <div>
-                                <h3 class="mb-2">
-                                    VAN auto do 6 pasażerów
-                                </h3>
-                                <p class="mt-0">
-                                     Za podstawienie 20 zł i za każdy kilometr 10% od kwoty za przejechane km z cennika 
-                                </p>
-                            </div>
-                            <a href="tel:222472020" class="btn-arrow">
-                                <span>Zarezerwuj</span>
-                                <svg viewBox="0 0 66 66" xmlns="http://www.w3.org/2000/svg" fill="none" height="45" width="45">
-                                    <circle cx="33" cy="33" r="33" fill="var(--color-accent-1)"></circle><path d="M47.2647 35.0507C47.8505 34.4649 47.8505 33.5151 47.2647 32.9293L37.7187 23.3834C37.133 22.7976 36.1832 22.7976 35.5974 23.3834C35.0116 23.9692 35.0116 24.9189 35.5974 25.5047L44.0827 33.99L35.5974 42.4753C35.0116 43.0611 35.0116 44.0108 35.5974 44.5966C36.1832 45.1824 37.133 45.1824 37.7187 44.5966L47.2647 35.0507ZM19.7958 35.49H46.204V32.49H19.7958V35.49Z" fill="#fff"></path>
-                                </svg>
-                            </a>
-                        </div>
-                    </div>
-                    <div class="col-md-6 col-xl-4">
-                        <div class="service-card rounded-lg shadow-3 p-4 bg-light-1 fade-in">
-                            <div>
-                                <h3 class="mb-2">
-                                    BUS auto do 8 pasażerów
-                                </h3>
-                                <p class="mt-0">
-                                    Za podstawienie 40 zł i za każdy kilometr 15% od kwoty za przejechane km z cennika 
-                                </p>
-                            </div>
-                            <a href="tel:222472020" class="btn-arrow">
-                                <span>Zarezerwuj</span>
-                                <svg viewBox="0 0 66 66" xmlns="http://www.w3.org/2000/svg" fill="none" height="45" width="45">
-                                    <circle cx="33" cy="33" r="33" fill="var(--color-accent-1)"></circle><path d="M47.2647 35.0507C47.8505 34.4649 47.8505 33.5151 47.2647 32.9293L37.7187 23.3834C37.133 22.7976 36.1832 22.7976 35.5974 23.3834C35.0116 23.9692 35.0116 24.9189 35.5974 25.5047L44.0827 33.99L35.5974 42.4753C35.0116 43.0611 35.0116 44.0108 35.5974 44.5966C36.1832 45.1824 37.133 45.1824 37.7187 44.5966L47.2647 35.0507ZM19.7958 35.49H46.204V32.49H19.7958V35.49Z" fill="#fff"></path>
-                                </svg>
-                            </a>
-                        </div>
-                    </div>
-                    <div class="col-md-6 col-xl-4">
-                        <div class="service-card rounded-lg shadow-3 p-4 bg-light-1 fade-in">
-                            <div>
-                                <h3 class="mb-2">
-                                    VIP auto
-                                </h3>
-                                <p class="mt-0">
-                                    Za podstawienie 70 zł i za każdy kilometr 50% od kwoty za przejechane km z cennika  
-                                </p>
-                            </div>
-                            <a href="tel:222472020" class="btn-arrow">
-                                <span>Zarezerwuj</span>
-                                <svg viewBox="0 0 66 66" xmlns="http://www.w3.org/2000/svg" fill="none" height="45" width="45">
-                                    <circle cx="33" cy="33" r="33" fill="var(--color-accent-1)"></circle><path d="M47.2647 35.0507C47.8505 34.4649 47.8505 33.5151 47.2647 32.9293L37.7187 23.3834C37.133 22.7976 36.1832 22.7976 35.5974 23.3834C35.0116 23.9692 35.0116 24.9189 35.5974 25.5047L44.0827 33.99L35.5974 42.4753C35.0116 43.0611 35.0116 44.0108 35.5974 44.5966C36.1832 45.1824 37.133 45.1824 37.7187 44.5966L47.2647 35.0507ZM19.7958 35.49H46.204V32.49H19.7958V35.49Z" fill="#fff"></path>
-                                </svg>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-
-                <!--
-                <div class="col-md-12">
-                    <div class="rounded-lg shadow-1 p-5 bg-light-1">
-                        <ul class="pricing-list">
-                            <li>
-                                <h3 class="my-0">Czas oczekiwania postoju liczony od momentu rozpoczęcia kursu</h3> 
-                                <span>0,85 gr za min/godzina 57 zł</span>
-                            </li>
-                            <div class="line-x mb-4"></div>
-                            <li>
-                                <h3 class="my-0">Zakupy do domu wedle regularnego cennika</h3> 
-                                <span>+ 20 zł za usługę</span>
-                            </li>
-                            <div class="line-x mb-4"></div>
-                            <li>
-                                <h3 class="my-0">Fotelik dla dziecka</h3> 
-                                <span>10 zł za szt.</span>
-                            </li>
-                            <div class="line-x mb-4"></div>
-                            <li>
-                                <h3 class="my-0">Zwierzęta </h3> 
-                                <span>10 zł</span>
-                            </li>
-                            <div class="line-x mb-4"></div>
-                            <li>
-                                <h3 class="my-0">Odpalenie auta </h3> 
-                                <span>30 zł</span>
-                            </li>
-                            <div class="line-x mb-4"></div>
-                            <li>
-                                <h3 class="my-0">Kombi auto do 4 pasażerów + 4 walizki do 20 kg </h3> 
-                                <span>dodatkowo płatny za podstawienie 10 zł</span>
-                            </li>
-                            <div class="line-x mb-4"></div>
-                            <li>
-                                <h3 class="my-0">Van auto do 6 pasażerów</h3> 
-                                <span>dodatkowo płatny za podstawienie 20 zł i za każdy kilometr 10% od kwoty za przejechane km z cennika DZIEŃ/NOC</span>
-                            </li>
-                            <div class="line-x mb-4"></div>
-                            <li>
-                                <h3 class="my-0">Bus auto do 8 pasażerów </h3>
-                               <span>dodatkowo płatny za podstawienie 40 zł i za każdy kilometr 15% od kwoty za przejechane km z cennika DZIEŃ/NOC</span> 
-                            </li>
-                            <div class="line-x mb-4"></div>
-                            <li>
-                                <h3 class="my-0">VIP auto </h3> 
-                                <span>dodatkowo płatny za podstawienie 70 zł i za każdy kilometr 50% od kwoty za przejechane km z cennika DZIEŃ/NOC (potwierdzane zawsze przez Dyspozytora)</span> 
-                            </li>                   
-                        </ul>
-                    </div>
-                </div>
-                -->
-
             </div>
         </div>
-    </div>
+
 </section>
 
 <style>
