--- a/src/includes/partials/header.njk
+++ b/src/includes/partials/header.njk
@@ -206,7 +206,7 @@
               </nav>
             </div>
             <div class="col-4 col-md-2 col-xl-3 d-flex justify-content-end">
-              <a href="tel:22 247 20 20" title="Zadzwoń" class="button-anim btn-write d-none d-lg-flex">
+              <a href="tel:222472020" title="Zadzwoń" class="button-anim btn-write d-none d-lg-flex">
                 <div class="button-anim-text">
                   <span>22 247 20 20</span>
                   <span>Zadzwoń</span>
