--- a/src/index.njk
+++ b/src/index.njk
@@ -10,7 +10,10 @@ description: Oferujemy bezpieczne i tanie przewozy. Zatrudniamy wyłącznie doś
 {% include 'sections/pricing.njk' %}
 {% include 'sections/services.njk' %}
 {% include 'sections/map.njk' %}
+{% include 'sections/faq.njk' %}
+{% include 'sections/app.njk' %}
 {% include 'sections/reviews.njk' %}
+
 
 
 
