--- a/src/includes/sections/faq.njk
+++ b/src/includes/sections/faq.njk
@@ -1,26 +1,34 @@
 <section class="bg-dark-3" itemscope itemtype="https://schema.org/FAQPage">
   <div class="pt-small pt-md-medium pb-small pb-md-medium rounded-xl bg-light-2">
     <div class="container">
-        <div class="accordion-wrap col-md-6"> 
-            <h2 class="h1 mt-0 mb-5 split-lines">
-                Najczęściej zadawane pytania
-            </h2>
-            {% for post in collections.faq %}
-            <div class="bg-light-1 rounded-md shadow-1 p-2 px-4 p-md-3 px-md-4 my-3 fade-in" itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
-              <button class="accordion my-3">
-                <span class="h4 title my-0" itemprop="name">
-                  {{ post.data.title }}
-                </span>
-                <span class="icon"></span>
-              </button>
-              <div class="panel col-md-11" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer">
-                <p itemprop="text">
-                  {{ post.data.answer }}
-                </p>
+        <div class="row">
+          <div class="col-md-8">
+            <div class="accordion-wrap"> 
+              <p class="my-0 color-accent-1 fade-in">Sprawdź</p>
+              <h2 class="h1 mt-2 mb-5 split-lines">
+                  Najczęściej zadawane pytania
+              </h2>
+              {% for post in collections.faq %}
+              <div class="bg-light-1 rounded-md shadow-1 p-2 px-4 p-md-3 px-md-4 my-3 fade-in" itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
+                <button class="accordion my-3">
+                  <span class="h4 title my-0" itemprop="name">
+                    {{ post.data.title }}
+                  </span>
+                  <span class="icon"></span>
+                </button>
+                <div class="panel col-md-11" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer">
+                  <p itemprop="text">
+                    {{ post.data.answer }}
+                  </p>
+                </div>
               </div>
+              {% endfor %}
             </div>
-            {% endfor %}
+            <div class="col-md-4">
+
+            </div>
           </div>
+        </div>
     </div> 
   </div>
 </section> 
