--- a/src/robots.njk
+++ b/src/robots.njk
@@ -5,5 +5,5 @@ eleventyExcludeFromCollections: true
 
 User-agent: * 
 Allow: / 
-Sitemap: https://przemekmiros.pl/sitemap.xml
+Sitemap: https://bluutaxi.pl/sitemap.xml
 
