--- a/src/includes/sections/hero.njk
+++ b/src/includes/sections/hero.njk
@@ -27,7 +27,7 @@
         Pobierz najnowszą aplikację mobilną ze swojego sklepu z aplikacjami – instaluj tylko aplikacje z oryginalnych sklepów.
       </p>
       <div class="d-flex mt-3">
-        <a href="tel:222472020" title="Zamów przejazd" class="button-anim btn-dark magnetic me-3 d-none d-md-flex fade-in"
+        <a href="tel:+48517162517" title="Zamów przejazd" class="button-anim btn-dark magnetic me-3 d-none d-md-flex fade-in"
         data-strength="40">
     <div class="button-anim-text">
   <span>Zamów przejazd</span>
