--- a/src/includes/partials/header.njk
+++ b/src/includes/partials/header.njk
@@ -206,9 +206,9 @@
               </nav>
             </div>
             <div class="col-4 col-md-2 col-xl-3 d-flex justify-content-end">
-              <a href="tel:222472020" title="Zadzwoń" class="button-anim btn-write d-none d-lg-flex">
+              <a href="tel:+48517162517" title="Zadzwoń" class="button-anim btn-write d-none d-lg-flex">
                 <div class="button-anim-text">
-                  <span>22 247 20 20</span>
+                  <span>+48 517 162 517</span>
                   <span>Zadzwoń</span>
                 </div>
                 <div class="button-anim-icon">
