--- a/src/includes/partials/footer.njk
+++ b/src/includes/partials/footer.njk
@@ -15,8 +15,8 @@
           <h2 class="h5 mb-4 color-light-1">
             Potrzebujesz pomocy?
           </h2>
-          <a href="tel:222472020" class="h3 color-light-1">
-            22 247 20 20
+          <a href="tel:+48517162517" class="h3 color-light-1">
+            +48 517 162 517
           </a>
           <p class="small color-light-3">
             Cały tydzień: 6.00 - 18.00
