--- a/src/includes/sections/pricing.njk
+++ b/src/includes/sections/pricing.njk
@@ -19,7 +19,7 @@
                         <p>
                             30 zł w tym 5km + za każdy następny kilometr 4 zł bez stref
                         </p>
-                        <a href="/" title="Zamów przejazd" class="button-anim magnetic fade-in"
+                        <a href="tel:+48517162517" title="Zamów przejazd" class="button-anim magnetic fade-in"
                         data-strength="60">
                     <div class="button-anim-text">
                   <span>Zamów przejazd</span>
@@ -45,7 +45,7 @@
                         <p class="color-light-3">
                             35 zł w tym 5km + za każdy następny kilometr 5 zł bez stref
                         </p>
-                        <a href="/" title="Zamów przejazd" class="button-anim magnetic fade-in"
+                        <a href="tel:+48517162517" title="Zamów przejazd" class="button-anim magnetic fade-in"
                         data-strength="60">
                     <div class="button-anim-text">
                   <span>Zamów przejazd</span>
