--- a/src/includes/partials/footer.njk
+++ b/src/includes/partials/footer.njk
@@ -8,7 +8,7 @@
         <div class="col-md-3">
           <img src="/assets/img/logo/logo-light.png" class="footer-logo" alt="">
           <p class="small color-light-3 mt-4">
-            Strona jest własnością firmy Bluu Group SP. Z O.O. z siedzibą w Piasecznie 05-500 ul. Kościuszki 10/1 NIP: 1231545527
+            Strona jest własnością firmy Bluu Group SP. z o. o. z siedzibą w Piasecznie 05-500 ul. Kościuszki 10/1 NIP: 1231545527
           </p>
         </div>
         <div class="offset-md-1 col-md-4">
@@ -25,7 +25,7 @@
             info@bluutaxi.pl
           </a>
         </div>
-        <div class="col-md-2">
+        <div class="col-md-3">
           <h2 class="h5 color-light-1">
             Obszary
           </h2>
@@ -50,11 +50,7 @@
             </li>
           </ul>
         </div>
-        <div class="col-md-2">
-          <h2 class="h5 color-light-1">
-            Kontakt
-          </h2>
-        </div>
+
       </div>
   </div>
 
