--- a/src/includes/sections/values.njk
+++ b/src/includes/sections/values.njk
@@ -1,4 +1,4 @@
-<section class="pt-medium pb-medium bg-dark-3">
+<section class="pt-medium pb-small bg-dark-3">
     <div class="container">
         <div class="row g-5">
             <div class="col-md-4">
