--- a/src/assets/sass/components/button.scss
+++ b/src/assets/sass/components/button.scss
@@ -168,7 +168,7 @@
 .fixed-button {
   position: fixed;
   bottom: 23px;
-  left: 20px;
+  right: 20px;
   opacity: 0;
   transform: translateY(100px);
   visibility: hidden;
@@ -253,13 +253,13 @@
   position: absolute;
   width: max-content;
   top: 46%;
-  right: -12.3em;
+  left: -11.4em;
   transform: translateY(-50%) scale(0);
   background: #fff;
-  padding: .8em 2em;
+  padding: 0.8em 2em;
   border-radius: 50px;
-  box-shadow: 0 0 30px #0001;
-  transition: .2s ease-in-out;
+  box-shadow: 0 0 30px rgba(0, 0, 0, 0.0666666667);
+  transition: 0.2s ease-in-out;
   color: var(--color-accent-2);
   font-weight: 700;
 }
