--- a/src/includes/partials/header.njk
+++ b/src/includes/partials/header.njk
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <meta name="generator" content="Eleventy"/>
-    <title>{{ title }} - Bluuetaxi</title>
+    <title>{{ title }} - Taxi Góra Kalwaria</title>
     <meta name="description" content="{{ description }}">
     {% set robots = robots | default('index') %}
     <meta name="robots" content="{{ robots }}">
