--- a/src/index.njk
+++ b/src/index.njk
@@ -1,6 +1,6 @@
 ---
 layout: "layouts/front.njk"
-title: Zamów taxi
+title: Zamów przejazd
 description: Oferujemy bezpieczne i tanie przewozy. Zatrudniamy wyłącznie doświadczonych i licencjonowanych kierowców.
 ---
 
