--- a/src/includes/sections/gallery.njk
+++ b/src/includes/sections/gallery.njk
@@ -12,42 +12,42 @@
               <!-- Slides -->
               <div class="swiper-slide">
                 <a href="/assets/img/services/taxi-1.jpeg" data-no-swup class="glightbox">
-                  <img src="/assets/img/services/taxi-1.jpeg" alt="Taxi Prażmów - Samochód" loading="lazy">
+                  <img src="/assets/img/services/taxi-1.jpeg" alt="Taxi Góra Kalwaria - Samochód" loading="lazy">
                 </a>               
               </div>
               <div class="swiper-slide">
                 <a href="/assets/img/services/taxi-2.jpeg" data-no-swup class="glightbox">
-                <img src="/assets/img/services/taxi-2.jpeg" alt="Taxi Prażmów - Samochód 2" loading="lazy">
+                <img src="/assets/img/services/taxi-2.jpeg" alt="Taxi Góra Kalwaria - Samochód 2" loading="lazy">
                 </a>  
               </div>
               <div class="swiper-slide">
                 <a href="/assets/img/services/taxi-3.jpeg" data-no-swup class="glightbox">
-                <img src="/assets/img/services/taxi-3.jpeg" alt="Taxi Prażmów - Samochód 3" loading="lazy">
+                <img src="/assets/img/services/taxi-3.jpeg" alt="Taxi Góra Kalwaria - Samochód 3" loading="lazy">
                 </a>  
               </div>
               <div class="swiper-slide">
                 <a href="/assets/img/services/taxi-4.jpeg" data-no-swup class="glightbox">
-                <img src="/assets/img/services/taxi-4.jpeg" alt="Taxi Prażmów - Samochód 4" loading="lazy">
+                <img src="/assets/img/services/taxi-4.jpeg" alt="Taxi Góra Kalwaria - Samochód 4" loading="lazy">
                 </a>  
               </div>
               <div class="swiper-slide">
                 <a href="/assets/img/services/taxi-5.jpeg" data-no-swup class="glightbox">
-                <img src="/assets/img/services/taxi-5.jpeg" alt="Taxi Prażmów - Samochód 5" loading="lazy">
+                <img src="/assets/img/services/taxi-5.jpeg" alt="Taxi Góra Kalwaria - Samochód 5" loading="lazy">
                 </a>  
               </div>
               <div class="swiper-slide">
                 <a href="/assets/img/services/taxi-6.jpeg" data-no-swup class="glightbox">
-                <img src="/assets/img/services/taxi-6.jpeg" alt="Taxi Prażmów - Samochód 6" loading="lazy">
+                <img src="/assets/img/services/taxi-6.jpeg" alt="Taxi Góra Kalwaria - Samochód 6" loading="lazy">
                 </a>  
               </div>
               <div class="swiper-slide">
                 <a href="/assets/img/services/taxi-7.jpeg" data-no-swup class="glightbox">
-                <img src="/assets/img/services/taxi-7.jpeg" alt="Taxi Prażmów - Samochód 7" loading="lazy">
+                <img src="/assets/img/services/taxi-7.jpeg" alt="Taxi Góra Kalwaria - Samochód 7" loading="lazy">
                 </a>  
               </div>
               <div class="swiper-slide">
                 <a href="/assets/img/services/taxi-8.jpeg" data-no-swup class="glightbox">
-                <img src="/assets/img/services/taxi-8.jpeg" alt="Taxi Prażmów - Samochód 8" loading="lazy">
+                <img src="/assets/img/services/taxi-8.jpeg" alt="Taxi Góra Kalwaria - Samochód 8" loading="lazy">
                 </a>  
               </div>
 
