--- a/src/includes/sections/hero.njk
+++ b/src/includes/sections/hero.njk
@@ -22,7 +22,7 @@
           </defs>
         </svg>
       </div>
-      <h1 class="xl mt-3 mb-4 split-lines color-light-1">Taxi Prażmów - zamów<br/>przez aplikację mobilną</h1>
+      <h1 class="xl mt-3 mb-4 split-lines color-light-1">Taxi Góra Kalwaria - zamów przez aplikację mobilną</h1>
       <p class="col-lg-10 mt-4 split-lines color-light-2">
         Pobierz najnowszą aplikację mobilną ze swojego sklepu z aplikacjami – instaluj tylko aplikacje z oryginalnych sklepów.
       </p>
