--- a/src/includes/partials/footer.njk
+++ b/src/includes/partials/footer.njk
@@ -37,10 +37,10 @@
               <a href="#" title="Zalesie Górne">Zalesie Górne</a>
             </li>
             <li>
-              <a href="#" title="Prażmów">Prażmów</a>
+              <a href="https://g.co/kgs/33QJW61" title="Prażmów">Prażmów</a>
             </li>
             <li>
-              <a href="#" title="Góra Kalwaria">Góra Kalwaria</a>
+              <a href="https://taxigorakalwaria.pl/" title="Góra Kalwaria">Góra Kalwaria</a>
             </li>
             <li>
               <a href="#" title="Grójec">Grójec</a>
