--- a/src/includes/partials/header.njk
+++ b/src/includes/partials/header.njk
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <meta name="generator" content="Eleventy"/>
-    <title>{{ title }} - Taxi Góra Kalwaria</title>
+    <title>{{ title }} - Taxi Prażmów</title>
     <meta name="description" content="{{ description }}">
     {% set robots = robots | default('index') %}
     <meta name="robots" content="{{ robots }}">
     <!-- Facebook Meta Tags -->
-    <meta property="og:url" content="">
+    <meta property="og:url" content="https://taxiprazmow.pl/">
     <meta property="og:type" content="website">
     <meta property="og:title" content="{{ title }}">
     <meta property="og:description" content="{{ description }}">
-    <meta property="og:image" content="/assets/img/opengraph.jpg">
+    <meta property="og:image" content="https://taxiprazmow.pl/assets/img/opengraph.jpg">
     <meta property="og:site_name" content="Bluuetaxi"/>
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
@@ -21,7 +21,7 @@
     <meta property="twitter:url" content="">
     <meta name="twitter:title" content="{{ title }}">
     <meta name="twitter:description" content="{{ description }}">
-    <meta name="twitter:image" content="/assets/img/opengraph.jpg">
+    <meta name="twitter:image" content="https://taxiprazmow.pl/assets/img/opengraph.jpg">
     <link rel="icon" type="image/png" sizes="32x32" href="/assets/img/favicon/favicon.svg">
     <link rel="icon" type="image/png" sizes="16x16" href="/assets/img/favicon/favicon.svg">
     <link rel="mask-icon" href="/assets/img/favicon/favicon.svg" color="#5bbad5">
