--- a/src/includes/sections/hero.njk
+++ b/src/includes/sections/hero.njk
@@ -22,9 +22,9 @@
           </defs>
         </svg>
       </div>
-      <h1 class="xl mt-3 mb-4 split-lines color-light-1">Taxi Góra Kalwaria - zamów przez aplikację mobilną</h1>
-      <p class="col-lg-10 mt-4 split-lines color-light-2">
-        Pobierz najnowszą aplikację mobilną ze swojego sklepu z aplikacjami – instaluj tylko aplikacje z oryginalnych sklepów.
+      <h1 class="xl mt-3 mb-4 split-lines color-light-1">Taxi Prażmów - zamów przez aplikację mobilną</h1>
+      <p class="col-lg-12 mt-4 split-lines color-light-2">
+        Świadczymy usługi przewozu osób i bagażu na terenie Prażmowa oraz okolicznych miejscowości, takich jak Piaseczno, Zalesie Górne, Góra Kalwaria i Tarczyn. Pobierz najnowszą aplikację mobilną i zamawiaj przejazdy szybko i wygodnie.
       </p>
       <div class="d-flex mt-3">
         <a href="tel:+48517162517" title="Zamów przejazd" class="button-anim btn-dark magnetic me-3 d-none d-md-flex fade-in"
