--- a/src/index.njk
+++ b/src/index.njk
@@ -1,7 +1,7 @@
 ---
 layout: "layouts/front.njk"
-title: Zamów przejazd
-description: Oferujemy bezpieczne i tanie przewozy. Zatrudniamy wyłącznie doświadczonych i licencjonowanych kierowców.
+title: Szybki i bezpieczny transport 24/7 
+description: „Potrzebujesz taxi w Prażmowie? Oferujemy całodobowy przewóz osób, transfery lotniskowe, obsługę imprez i zakupy na telefon. 
 ---
 
 {% include 'sections/hero.njk' %}
