--- a/src/includes/partials/header.njk
+++ b/src/includes/partials/header.njk
@@ -27,7 +27,7 @@
     <link rel="mask-icon" href="/assets/img/favicon/favicon.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
-
+    <meta name="google-site-verification" content="fWaOyXNESqAZoyZAPHuUrp2gW1Z1B7cEZ4MSERYq91E" />
     <link rel="stylesheet" href="{{ '/assets/css/style.css' | url }}">
     <link rel="stylesheet" href="/static/cookieconsent.css" media="print" onload="this.media='all'">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css"/>
