--- a/src/includes/partials/footer.njk
+++ b/src/includes/partials/footer.njk
@@ -31,13 +31,13 @@
           </h2>
           <ul class="footer-list">
             <li>
-              <a href="#" title="Piaseczno">Piaseczno</a>
+              <a href="https://bluutaxi.pl/" title="Piaseczno">Piaseczno</a>
             </li>
             <li>
               <a href="#" title="Zalesie Górne">Zalesie Górne</a>
             </li>
             <li>
-              <a href="https://g.co/kgs/33QJW61" title="Prażmów">Prażmów</a>
+              <a href="https://taxiprazmow.pl/" title="Prażmów">Prażmów</a>
             </li>
             <li>
               <a href="https://taxigorakalwaria.pl/" title="Góra Kalwaria">Góra Kalwaria</a>
