--- a/src/includes/sections/map.njk
+++ b/src/includes/sections/map.njk
@@ -2,11 +2,14 @@
 
 <section class="pt-medium pb-medium bg-dark-3">
     <div class="container">
-      <div class="col-md-6 mx-auto text-center pb-xsmall">
+      <div class="col-md-7 mx-auto text-center pb-xsmall">
         <p class="my-0 color-accent-1 fade-in">Sprawdź</p>
         <h2 class="h1 mt-2 split-lines color-light-1">
-            Dokąd dowozimy
+            Gdzie dojeżdża Taxi Prażmów
         </h2>
+        <p class="text-center mb-4 split-lines color-light-2">
+          Szukasz sprawdzonego taxi w Prażmowie? Dobrze trafiłeś. Oferujemy szybki i komfortowy przewóz osób na terenie gminy Prażmów oraz okolic. Działamy 7 dni w tygodniu – wystarczy jeden telefon, a nasz kierowca będzie na miejscu.
+        </p>
       </div>
         <div class="map-wrap rounded-md p-4 d-none">
             <img src="/assets/img/map.svg" alt="">
