--- a/src/includes/sections/pricing.njk
+++ b/src/includes/sections/pricing.njk
@@ -1,10 +1,10 @@
 <section class="pt-medium pb-medium pb-md-large bg-dark-3" id="cennik">
 
         <div class="container">
-            <div class="col-md-6 mx-auto text-center pb-xsmall">
+            <div class="col-md-7 mx-auto text-center pb-xsmall">
                 <p class="my-0 color-accent-1 fade-in">Sprawdź</p>
                 <h2 class="h1 mt-2 split-lines color-light-1">
-                    Cennik usług
+                    Cennik usług - Taxi Prażmów
                 </h2>
             </div>
             <div class="row g-4">
