--- a/src/index.njk
+++ b/src/index.njk
@@ -1,6 +1,6 @@
 ---
 layout: "layouts/front.njk"
-title: Szybki i bezpieczny transport 24/7 
+title: Szybki i bezpieczny transport 24/7 w Prażmowie
 description: „Potrzebujesz taxi w Prażmowie? Oferujemy całodobowy przewóz osób, transfery lotniskowe, obsługę imprez i zakupy na telefon. 
 ---
 
