--- a/src/includes/sections/faq.njk
+++ b/src/includes/sections/faq.njk
@@ -2,7 +2,7 @@
   <div class="pt-small pt-md-medium pb-small pb-md-medium rounded-xl bg-light-2">
     <div class="container">
         <div class="row">
-          <div class="col-md-8">
+          <div class="col-md-7 mx-auto">
             <div class="accordion-wrap"> 
               <p class="my-0 color-accent-1 fade-in">Sprawdź</p>
               <h2 class="h1 mt-2 mb-5 split-lines">
@@ -23,9 +23,6 @@
                 </div>
               </div>
               {% endfor %}
-            </div>
-            <div class="col-md-4">
-
             </div>
           </div>
         </div>
