Add sitemap link to menu

--- a/src/includes/partials/footer.njk
+++ b/src/includes/partials/footer.njk
@@ -79,6 +79,11 @@
               RODO
             </a>
           </li>
+            <li>
+            <a href="/mapa-strony/" title="Mapa strony" class="small color-light-1">
+              Mapa strony
+            </a>
+          </li>
         </ul>
         <p class="small color-light-2 op-5 mb-3">2025 Bluuetaxi Wszelkie prawa zastrzeżone</p>
       </div>
