--- a/src/page/mapa-strony.njk
+++ b/src/page/mapa-strony.njk
@@ -10,24 +10,7 @@ description: Mapa witryny
 
         <h2 class="split-text-lines">Strony</h2>
         <div class="line-x"></div>
-        <ul class="pt-xsmall">
-            <li class="fadeIn my-4">
-              <a href="/realizacje/" title="Realizacje">Realizacje</a>
-            </li>
-            <div class="line-x lx-op"></div>
-            <li class="fadeIn my-4">
-                <a href="/blog/" title="Artykuły">Artykuły</a>
-            </li>
-            <div class="line-x lx-op"></div>
-            <li class="fadeIn my-4">
-                <a href="/wycena/" title="Wycena">Wycena</a>
-            </li>
-            <div class="line-x lx-op"></div>
-            <li class="fadeIn my-4">
-                <a href="/kontakt/" title="Kontakt">Kontakt</a>
-            </li>
-            <div class="line-x lx-op"></div>
-        </ul>
+        <a href="/" title="Taxi Prażmów">Taxi Prażmów</a>
 
     </div>
   </div>
