--- a/src/page/kontakt.njk
+++ b/src/page/kontakt.njk
@@ -1,5 +1,5 @@
 ---
 layout: "layouts/base-hero.njk"
 title: Kontakt
-description: Skontaktuj się ze mną telefonicznie lub mailowo. Chętnie podpowiem i pomogę wybrać optymalne rozwiązanie.
+description: 
 ---
